added breakpoints for cards and blog summary area

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -305,3 +305,134 @@ footer a:hover {
 	transform: translateY(-50%);
 }
 
+/*-- Breakpoint 1000 ---*/
+@media (max-width: 1000px) {
+	.blog-card {
+		float: left;
+		/*height: 334px;*/
+		width: 33.3%;
+	}
+
+	#blog-card-area > div:nth-child(4) {
+		display: none;
+	}
+}
+
+/*-- Breakpoint 780px --*/
+@media (max-width: 780px) {
+	.nav {
+		display: inline-block;
+		height: 220px;
+	}
+
+	.nav li {
+		margin-left: 0px;
+		margin-right: 0px;
+		width: 100%;
+	}
+
+	.card {
+		width: 50%;
+		margin-bottom: -3px;
+		margin-top: -2px;
+	}
+
+	.site-name {
+		height: 72.5%;
+	}
+
+	.blog-card {
+		float: left;
+		height: 334px;
+		width: 50%;
+	}
+
+	#blog-card-area > div:nth-child(3) {
+		display: none;
+}
+
+/*.nav {
+	align-items: center;
+	background-color: #fff;
+	display: inline-flex;
+	font-family: 'Rubik', sans-serif;
+	font-weight: bold;
+	height: 80px;
+	list-style-type: none;
+	margin-bottom: 0;
+	margin-top: 0;
+	padding: 0;
+	position: relative;
+	text-align: center;
+	width: 100%;
+}
+
+.nav li {
+	margin: 4%;
+	text-align: center;
+	width: 25%;
+}
+
+.nav a {
+	text-decoration: none;
+	color: #777;
+}
+
+.nav a:hover {
+	color: #000;
+}*/
+
+/*
+.card {
+	float: left;
+	margin-bottom: -2px;
+	margin-top: -2px;
+	width: 33.3%;
+	overflow: hidden;
+	position: relative;
+}
+.card img {
+	z-index: 0;
+}
+
+.site-name {
+	background-color: rgba(255,133,51, 0.9);
+	color: #fff;
+	display: none;
+	font-family: 'Rubik', sans-serif;
+	font-size: 30px;
+	height: 73%;
+	left: 0;
+	overflow: hidden;
+	padding-top: 20%;
+	position: absolute;
+	top: 0;
+	width: 100%;
+	z-index: 1;
+}
+
+.card:hover .site-name {
+	display: block;
+}*/
+
+@media (max-width: 580px) {
+
+	.nav {
+		height: 200px;
+	}
+
+
+	.card {
+		width: 100%;
+	}
+
+	.blog-card {
+		float: center;
+		/*height: 334px;*/
+		width: 100%;
+	}
+
+	#blog-card-area > div:nth-child(2) {
+		display: none;
+	}
+}
